WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133545
[CSSRegions] Region box incorrectly overlaps floating box
https://bugs.webkit.org/show_bug.cgi?id=133545
Summary
[CSSRegions] Region box incorrectly overlaps floating box
Mihnea Ovidenie
Reported
2014-06-05 06:55:13 PDT
A region box creates a BFC and it should not overlap a floating box in the same formatting context:
http://www.w3.org/TR/CSS21/visuren.html#bfc-next-to-float
Attachments
Patch
(4.42 KB, patch)
2014-06-05 06:59 PDT
,
Mihnea Ovidenie
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mihnea Ovidenie
Comment 1
2014-06-05 06:59:16 PDT
Created
attachment 232544
[details]
Patch
Dave Hyatt
Comment 2
2014-06-05 09:48:18 PDT
Comment on
attachment 232544
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2014-06-05 23:45:26 PDT
Comment on
attachment 232544
[details]
Patch Clearing flags on attachment: 232544 Committed
r169639
: <
http://trac.webkit.org/changeset/169639
>
WebKit Commit Bot
Comment 4
2014-06-05 23:45:29 PDT
All reviewed patches have been landed. Closing bug.
Mihnea Ovidenie
Comment 5
2014-06-06 01:13:26 PDT
***
Bug 124977
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug