[CSSRegions] Region box incorrectly overlaps floating box https://bugs.webkit.org/show_bug.cgi?id=133545

Reviewed by David Hyatt.

Source/WebCore:
A region box creates a BFC and it should not overlap a floating box in the same formatting context: http://www.w3.org/TR/CSS21/visuren.html#bfc-next-to-float

Test: fast/regions/region-as-bfc-avoids-float.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::avoidsFloats):

LayoutTests:
Add test to check that a region does not incorrectly overlap a floating
element in the same formatting context.

* fast/regions/region-as-bfc-avoids-float-expected.html: Added.
* fast/regions/region-as-bfc-avoids-float.html: Added.


Canonical link: https://commits.webkit.org/151562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169639 268f45cc-cd09-0410-ab3c-d52691b4dbfc